--- a/www/index.html
+++ b/www/index.html
@@ -187,7 +187,11 @@
 					Lungo.Router.section("seccion2")
 
 				});
-
 			</script>
+			 <script type="text/javascript" src="phonegap.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript">
+            app.initialize();
+        </script>
 	</body>
 </html>
